LDR/.metadata/.plugins/org.eclipse.cdt.ui/q2.build.log
22:10:06 **** Incremental Build of configuration Debug for project q2 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'MX_USART2_UART_Init':
../Core/Src/main.c:214:11: error: 'huart2' undeclared (first use in this function)
  214 |           huart2.Instance = USART2;
      |           ^~~~~~
../Core/Src/main.c:214:11: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:216:35: error: 'UART_WORDLENGTH_8B' undeclared (first use in this function)
  216 |           huart2.Init.WordLength= UART_WORDLENGTH_8B;
      |                                   ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:217:34: error: 'UART_STOPBITS_1' undeclared (first use in this function)
  217 |           huart2.Init.StopBits = UART_STOPBITS_1;
      |                                  ^~~~~~~~~~~~~~~
../Core/Src/main.c:218:32: error: 'UART_PARITY_NONE' undeclared (first use in this function)
  218 |           huart2.Init.Parity = UART_PARITY_NONE;
      |                                ^~~~~~~~~~~~~~~~
../Core/Src/main.c:219:30: error: 'UART_MODE_TX_RX' undeclared (first use in this function)
  219 |           huart2.Init.Mode = UART_MODE_TX_RX;
      |                              ^~~~~~~~~~~~~~~
../Core/Src/main.c:220:35: error: 'UART_HWCONTROL_NONE' undeclared (first use in this function)
  220 |           huart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      |                                   ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:221:38: error: 'UART_OVERSAMPLING_16' undeclared (first use in this function)
  221 |           huart2.Init.OverSampling = UART_OVERSAMPLING_16;
      |                                      ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:222:15: warning: implicit declaration of function 'HAL_UART_Init'; did you mean 'HAL_I2C_Init'? [-Wimplicit-function-declaration]
  222 |           if (HAL_UART_Init(&huart2) != HAL_OK)
      |               ^~~~~~~~~~~~~
      |               HAL_I2C_Init
../Core/Src/main.c: In function 'MX_GPIO_Init':
../Core/Src/main.c:252:3: error: 'GPIO_Initstruct' undeclared (first use in this function)
  252 |   GPIO_Initstruct.Pin =  GPIO_PIN_13| GPIO_PIN_14;
      |   ^~~~~~~~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:205:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  205 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

22:10:06 Build Failed. 9 errors, 2 warnings. (took 717ms)

